# HTT-Utility

./: CMakeLists.txt  README.md
hidapi/windows/: hid.c
src/: htt_util.cpp
